crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__loop-4.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"loop { continue}\")"
---
syntax_tree:
0..16 Root
|0..16 Block
||0..16 Statement
|||0..16 Loop
||||KeywordLoop `loop`
||||Whitespace ` `
||||BraceOpen `{`
||||Whitespace ` `
||||7..15 Block
|||||7..15 Statement
||||||7..15 Continue
|||||||KeywordContinue `continue`
||||BraceClose `}`

diagnostics:
