crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__loop.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"loop { 1 + 2 }\")"
---
syntax_tree:
0..14 Root
|0..14 Block
||0..14 Statement
|||0..14 Loop
||||KeywordLoop `loop`
||||Whitespace ` `
||||BraceOpen `{`
||||Whitespace ` `
||||7..13 Block
|||||7..13 Statement
||||||7..13 Expression
|||||||7..13 BinaryOperation
||||||||7..9 Expression
|||||||||7..9 Value
||||||||||7..9 NumberLiteral
|||||||||||NumberLiteral `1`
|||||||||||Whitespace ` `
||||||||Plus `+`
||||||||Whitespace ` `
||||||||11..13 Expression
|||||||||11..13 Value
||||||||||11..13 NumberLiteral
|||||||||||NumberLiteral `2`
|||||||||||Whitespace ` `
||||BraceClose `}`

diagnostics:
