crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__multiple_statements.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"let a = 1\\nlet b = 2\")"
---
syntax_tree:
0..19 Root
|0..19 Block
||0..9 Statement
|||0..9 Assignment
||||KeywordLet `let`
||||Whitespace ` `
||||Identifier `a`
||||Whitespace ` `
||||Equal `=`
||||Whitespace ` `
||||8..9 Expression
|||||8..9 Value
||||||8..9 NumberLiteral
|||||||NumberLiteral `1`
||Newline `\n`
||10..19 Statement
|||10..19 Assignment
||||KeywordLet `let`
||||Whitespace ` `
||||Identifier `b`
||||Whitespace ` `
||||Equal `=`
||||Whitespace ` `
||||18..19 Expression
|||||18..19 Value
||||||18..19 NumberLiteral
|||||||NumberLiteral `2`

diagnostics:
