crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__parse_assignment-2.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"let helloworld: I32 = 1\\n\")"
---
syntax_tree:
0..24 Root
|0..24 Block
||0..23 Statement
|||0..23 Assignment
||||KeywordLet `let`
||||Whitespace ` `
||||Identifier `helloworld`
||||Colon `:`
||||Whitespace ` `
||||16..20 Type
|||||16..20 TypeRef
||||||16..20 TypePath
|||||||Identifier `I32`
|||||||Whitespace ` `
||||Equal `=`
||||Whitespace ` `
||||22..23 Expression
|||||22..23 Value
||||||22..23 NumberLiteral
|||||||NumberLiteral `1`
||Newline `\n`

diagnostics:
