crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__parse_assignment.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"let helloworld = 1\\n\")"
---
syntax_tree:
0..19 Root
|0..19 Block
||0..18 Statement
|||0..18 Assignment
||||KeywordLet `let`
||||Whitespace ` `
||||Identifier `helloworld`
||||Whitespace ` `
||||Equal `=`
||||Whitespace ` `
||||17..18 Expression
|||||17..18 Value
||||||17..18 NumberLiteral
|||||||NumberLiteral `1`
||Newline `\n`

diagnostics:
