crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__parse_expression-3.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"1 * \\\"test\\\"\")"
---
syntax_tree:
0..10 Root
|0..10 Block
||0..10 Statement
|||0..10 Expression
||||0..10 BinaryOperation
|||||0..2 Expression
||||||0..2 Value
|||||||0..2 NumberLiteral
||||||||NumberLiteral `1`
||||||||Whitespace ` `
|||||Times `*`
|||||Whitespace ` `
|||||4..10 Expression
||||||4..10 Value
|||||||4..10 StringLiteral
||||||||StringLiteral `\"test\"`

diagnostics:
