crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__parse_expression-5.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"{a: 1,\\nb: 2 * 3}\")"
---
syntax_tree:
0..16 Root
|0..16 Block
||0..16 Statement
|||0..16 Expression
||||0..16 Value
|||||0..16 StructLiteral
||||||BraceOpen `{`
||||||1..5 StructLiteralField
|||||||Identifier `a`
|||||||Colon `:`
|||||||Whitespace ` `
|||||||4..5 Expression
||||||||4..5 Value
|||||||||4..5 NumberLiteral
||||||||||NumberLiteral `1`
||||||Comma `,`
||||||Newline `\n`
||||||7..15 StructLiteralField
|||||||Identifier `b`
|||||||Colon `:`
|||||||Whitespace ` `
|||||||10..15 Expression
||||||||10..15 BinaryOperation
|||||||||10..12 Expression
||||||||||10..12 Value
|||||||||||10..12 NumberLiteral
||||||||||||NumberLiteral `2`
||||||||||||Whitespace ` `
|||||||||Times `*`
|||||||||Whitespace ` `
|||||||||14..15 Expression
||||||||||14..15 Value
|||||||||||14..15 NumberLiteral
||||||||||||NumberLiteral `3`
||||||BraceClose `}`

diagnostics:
